# command-line_apps_ocaml

./: .gitignore  README.md  dune-project  mdp.opam  todo.opam  wc.opam
mdp/: README.md
mdp/lib/: dune  mdp.ml
mdp/test/cram/: dune
mdp/test/cram/mdp.t/: custom_template.html  run.t
mdp/test/unit/: dune  mdp_test.ml
todo/: README.md
todo/lib/: cli.ml  dune  file.ml  json.ml  json.mli  todo.ml  todo_list.ml  todo_list.mli
todo/test/cram/: dune  todo.t
todo/test/unit/: cli.ml  dune  file_persistence.ml  todo_test.ml
wc/: README.md
wc/lib/: dune  wc.ml  wc.mli
wc/test/: dune  wc.t  wc_test.ml
